first 4 test files run in OpenJDK mode